# monopoly

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  test.ipynb
.github/workflows/: python-package.yml
monopoly/display_terminal/: __init__.py  display_terminal.py
pyseto/: tox.ini
